--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <title>BugCrowd Submission Form</title>
 </head>
 <body>
+<h1>BugCrowd Submission Form</h1>
+<br/>
+<br/>
+<br/>
 <script async
   src="https://bugcrowd.com/5a71b7bd-7dc7-463c-baec-00ac0f9395fb/external/script"
   data-bugcrowd-program="https://bugcrowd.com/5a71b7bd-7dc7-463c-baec-00ac0f9395fb/external/report"></script>
